@@ -1,27 +1,36 @@
 import 'package:flutter/material.dart';
 
+import '../../utils/colors.dart';
 import './divider.dart';
 
 class HeadCard extends StatelessWidget {
-  final String title1, subtitle1, title2, subtitle2, title3;
-  final List subtitle3;
-  // final Widget subtitle2;
+  final String definicion, subDefinicion;
+  final String examples, subExamples;
+  final String synonyms, subSynonyms;
+  final String type, subType;
 
   HeadCard({
-    this.title1,
-    this.subtitle1,
-    this.title2,
-    this.subtitle2,
-    this.title3,
-    this.subtitle3,
-    // this.subtitle2,
+    this.definicion,
+    this.subDefinicion,
+    this.examples,
+    this.subExamples,
+    this.synonyms,
+    this.subSynonyms,
+    this.type,
+    this.subType,
   });
 
   @override
   Widget build(BuildContext context) {
     final style = TextStyle(
       fontWeight: FontWeight.normal,
-      fontSize: 20.0
+      fontSize: 18.0
+    );
+
+    final subStyle = TextStyle(
+      fontWeight: FontWeight.normal,
+      fontSize: 14.0,
+      color: secondaryText
     );
 
     return Card(
@@ -36,38 +45,45 @@ class HeadCard extends StatelessWidget {
                 crossAxisAlignment: CrossAxisAlignment.start,
                 children: <Widget>[
 
-                  Text(title1,style: style),
+                  Text(definicion, style: style),
                   Separator.spacer(height: 12.0),
                   Column(
                     crossAxisAlignment: CrossAxisAlignment.start,
                     children: <Widget>[
-                      Text(subtitle1)
+                      Text(subDefinicion, style: subStyle)
                     ],
                   ),
-                  Separator.spacer(height: 12.0),
 
-                  Text(title2,style: style),
+                  Separator.spacer(height: 12.0),
+                  Text(examples, style: style),
                   Separator.spacer(height: 12.0),
                   Column(
                     crossAxisAlignment: CrossAxisAlignment.start,
                     children: <Widget>[
-                      Text(subtitle2)
+                      Text(subExamples, style: subStyle)
                     ],
                   ),
-                  Separator.spacer(height: 12.0),
 
-                  Text(title3, style: style),
                   Separator.spacer(height: 12.0),
-                  
+                  Text(synonyms, style: style),
+                  Separator.spacer(height: 12.0),
                   Column(
                     crossAxisAlignment: CrossAxisAlignment.start,
                     children: <Widget>[
-
-                      Text(subtitle3.toString())
+                      Text(subSynonyms, style: subStyle)
                     ],
                   ),
 
-                  
+                  Separator.spacer(height: 12.0),
+                  Text(type, style: style),
+                  Separator.spacer(height: 12.0),
+                  Column(
+                    crossAxisAlignment: CrossAxisAlignment.start,
+                    children: <Widget>[
+                      Text(subType,  style: subStyle)
+                    ],
+                  ),
+
                 ],
               ),
             ),
